--- a/appz.yml
+++ b/appz.yml
@@ -24,7 +24,7 @@ monitor:
 properties:
   MOD_CLUSTER: modcluster-1-3:6666
   title: Tomcat HelloWorld
-  head_color : Green
+  head_color : Red
   threads: 5
   delay: 15
   next: 15
