--- a/appz.yml
+++ b/appz.yml
@@ -1,5 +1,5 @@
 app:
-  name: Tomcat Loadgen
+  name: Tomcat8 HelloWorld
   code: TCLG
   notify: appzdev@cloudbourne.co
 
@@ -24,7 +24,7 @@ monitor:
 properties:
   MOD_CLUSTER: modcluster-1-3:6666
   title: Tomcat HelloWorld
-  head_color : Yellow
+  head_color : Green
   threads: 5
   delay: 15
   next: 15
