--- a/appz.yml
+++ b/appz.yml
@@ -24,12 +24,12 @@ monitor:
 properties:
   MOD_CLUSTER: modcluster-1-3:6666
   title: Tomcat HelloWorld
-  head_color : Red
+  head_color : Green
   threads: 5
   delay: 15
   next: 15
   download: true
   random : true
-  nano : 70
+  nano : 71
   MY_PASSWORD: 
     vault: MY_PASSWORD
