--- a/appz.yml
+++ b/appz.yml
@@ -22,9 +22,9 @@ monitor:
   notify: appzops@cloudbourne.co
 
 properties:
-  MOD_CLUSTER: modcluster-1-3:6666
+  MOD_CLUSTER: alpha.modcluster-1-3:6666
   title: Tomcat HelloWorld
-  head_color : Green
+  head_color : Red
   threads: 5
   delay: 15
   next: 15
