--- a/appz.yml
+++ b/appz.yml
@@ -22,7 +22,7 @@ monitor:
   notify: appzops@cloudbourne.co
 
 properties:
-  MOD_CLUSTER: alpha.modcluster-1-3:6666
+  MOD_CLUSTER: modcluster-1-3.alpha:6666
   title: Tomcat HelloWorld
   head_color : Red
   threads: 5
