--- a/appz.yml
+++ b/appz.yml
@@ -22,9 +22,9 @@ monitor:
   notify: appzops@cloudbourne.co
 
 properties:
-  MOD_CLUSTER: modcluster-1-3.alpha:6666
+  MOD_CLUSTER: modcluster-1-3.alpha-dev:6666
   title: Tomcat HelloWorld
-  head_color : Red
+  head_color : Green
   threads: 5
   delay: 15
   next: 15
