--- a/appz.yml
+++ b/appz.yml
@@ -23,7 +23,7 @@ monitor:
 
 properties:
   MOD_CLUSTER: modcluster-1-3.alpha-dev:6666
-  title: Tomcat HelloWorld
+  title: Tomcat HelloWorld on NUTANIX
   head_color : Green
   threads: 5
   delay: 15
