--- a/appz.yml
+++ b/appz.yml
@@ -23,8 +23,8 @@ monitor:
 
 properties:
   MOD_CLUSTER: modcluster-1-3.alpha-dev:6666
-  title: Tomcat HelloWorld on NUTANIX
-  head_color : Green
+  title: Tomcat HelloWorld on NUTANIX DEMO
+  head_color : RoyalBlue
   threads: 5
   delay: 15
   next: 15
