--- a/appz.yml
+++ b/appz.yml
@@ -24,7 +24,7 @@ monitor:
 properties:
   MOD_CLUSTER: modcluster-1-3.alpha-dev:6666
   title: Tomcat HelloWorld on NUTANIX DEMO
-  head_color : RoyalBlue
+  head_color : Green
   threads: 5
   delay: 15
   next: 15
