--- a/appz.yml
+++ b/appz.yml
@@ -9,10 +9,10 @@ build:
   build_file: pom.xml
   output_files: output/*.war
   image_template: tomcat8-v2
-  image_name: alpha/tomcat-helloworld
+  image_name: ea-sharedservices/tomcat-helloworld
 
 deploy:
-  context: alpha/DEV
+  context: EA-SharedServices/DEV
   replicas: 4
   port: 8080
   strategy : rolling
@@ -24,7 +24,7 @@ monitor:
 properties:
   MOD_CLUSTER: modcluster-1-3.alpha-dev:6666
   title: Tomcat HelloWorld on NUTANIX DEMO
-  head_color : Red
+  head_color : Blue
   threads: 5
   delay: 15
   next: 15
